--- a/Exercicio1-Calculadora/lib/i386-win32/unit1.lfm
+++ b/Exercicio1-Calculadora/lib/i386-win32/unit1.lfm
@@ -50,7 +50,7 @@ object fView: TfView
       Align = alRight
       BorderSpacing.Left = 2
       BorderSpacing.Right = 2
-      Caption = 'C'
+      Caption = '⌫'
       Color = 10329501
       Font.CharSet = ANSI_CHARSET
       Font.Height = -20
@@ -163,6 +163,7 @@ object fView: TfView
         TabOrder = 0
         OnClick = pnDisplayClick
         object btn7: TButton
+          Tag = 7
           Left = 14
           Height = 50
           Top = 9
@@ -184,6 +185,7 @@ object fView: TfView
           OnClick = btn7Click
         end
         object btn8: TButton
+          Tag = 8
           Left = 94
           Height = 50
           Top = 9
@@ -205,6 +207,7 @@ object fView: TfView
           OnClick = btn8Click
         end
         object btn9: TButton
+          Tag = 9
           Left = 175
           Height = 50
           Top = 9
@@ -249,6 +252,7 @@ object fView: TfView
         TabOrder = 1
         OnClick = pnDisplayClick
         object btn4: TButton
+          Tag = 4
           Left = 14
           Height = 50
           Top = 9
@@ -270,6 +274,7 @@ object fView: TfView
           OnClick = btn4Click
         end
         object btn5: TButton
+          Tag = 5
           Left = 94
           Height = 50
           Top = 9
@@ -291,6 +296,7 @@ object fView: TfView
           OnClick = btn5Click
         end
         object btn6: TButton
+          Tag = 6
           Left = 175
           Height = 50
           Top = 9
@@ -335,6 +341,7 @@ object fView: TfView
         TabOrder = 2
         OnClick = pnDisplayClick
         object btn1: TButton
+          Tag = 1
           Left = 14
           Height = 50
           Top = 9
@@ -356,6 +363,7 @@ object fView: TfView
           OnClick = btn1Click
         end
         object btn2: TButton
+          Tag = 2
           Left = 94
           Height = 50
           Top = 9
@@ -377,6 +385,7 @@ object fView: TfView
           OnClick = btn2Click
         end
         object btn3: TButton
+          Tag = 3
           Left = 175
           Height = 50
           Top = 9
