--- a/Exercicio1-Calculadora/unit1.lfm
+++ b/Exercicio1-Calculadora/unit1.lfm
@@ -50,7 +50,7 @@ object fView: TfView
       Align = alRight
       BorderSpacing.Left = 2
       BorderSpacing.Right = 2
-      Caption = 'C'
+      Caption = '⌫'
       Color = 10329501
       Font.CharSet = ANSI_CHARSET
       Font.Height = -20
