--- a/Exercicio1-Calculadora/backup/unit1.lfm
+++ b/Exercicio1-Calculadora/backup/unit1.lfm
@@ -36,6 +36,7 @@ object fView: TfView
       Font.Quality = fqDraft
       ParentFont = False
       ReadOnly = True
+      TabStop = False
       TabOrder = 0
       Text = 'edHistorico'
     end
@@ -82,6 +83,7 @@ object fView: TfView
       Font.Quality = fqDraft
       ParentFont = False
       ReadOnly = True
+      TabStop = False
       TabOrder = 1
       Text = 'edDisplay'
     end
